2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* csv.test: Hooked into the new common test support code.

2006-01-16  Andreas Kupries  <akupries@shaw.ca>

	* csv.man: New command 'iscomplete' to detect partial csv
	* csv.tcl: records. Used to enable the read2* commands to handle
	  multi-line csv records. Code provided by Jeff Hobbs, via [SF
	  Tcllib Patch 1407811]. See also the [Tcllib FR 733407].

2005-10-24  Andreas Kupries <andreask@activestate.com>

	* csv.bench: New file. Basic benchmarks for CSV processing.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-09-30  Andreas Kupries <andreask@activestate.com>

	* pkgIndex.tcl: Added command 'csv::joinmatrix', which converts a
	* csv.man:      matrix object into CSV records, one record per
	* csv.tcl:      row. Inspired by [SF Tcllib RFE 1204345] which
	                brought the conversion up, but went a round-about
			way via a report object.

2005-04-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* csv.test: Testsuite package requirements fixed to ensure use of
	  local packages.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* csv.tcl: Updated version number to sync with 1.6.1
	* csv.man: release.
	* pkgIndex.tcl:

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* csv.tcl: Rel. engineering. Updated version number 
	* csv.man: of csv to reflect its changes, to 0.5.1.
	* pkgIndex.tcl:

2004-05-03  Andreas Kupries  <andreask@pliers.activestate.com>

	* csv.tcl (read2matrix): Fixed bogus switch case. Had case "4"